refactor(测试计划): 测试计划状态重构